move 404 page to public folder

--- a/public/404.html
+++ b/public/404.html
@@ -37,6 +37,11 @@
 </head>
 
 <body>
+    <!-- This page is used for GitHub Pages SPA routing -->
+    <!-- It redirects all 404s to the main page with path preserved -->
+    <p>Redirecting to the application...</p>
 </body>
+
+</html>
 
 </html>
